[package]
name = "swapbytes"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
    # P2P networking
    libp2p = { version = "0.55", features = ["noise", "ping", "tcp", "tokio", "yamux"] }

    # Async primitives
    futures = "0.3.30"

    # Async runtime
    tokio = { version = "1.37.0", features = ["full"] }
    tokio-util = "0.7.5"

    # TUI
    ratatui = "0.29.0"
    crossterm = "0.29.0"
uuid = { version = "1.16.0", features = ["v4"] }
