[package]
name = "swapbytes"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
    # P2P networking
    libp2p = { version = "0.55", features = ["noise", "ping", "tcp", "tokio", "yamux", "macros", "gossipsub", "mdns", "request-response"] }

    # Async primitives
    futures = "0.3.30"
    async-trait = "0.1"

    # Async runtime
    tokio = { version = "1.37.0", features = ["full"] }
    tokio-util = { version = "0.7.11", features = ["codec", "compat"] }
    bytes = "1"

    # TUI
    ratatui = "0.29.0"
    crossterm = "0.29.0"
    uuid = { version = "1.16.0", features = ["v4"] }

    # Serialization/Deserialization
    serde = { version = "1.0", features = ["derive"] }
    serde_json = "1.0"

    # Random number generation
    rand = "0.9.1"

    # Time
    chrono = "0.4.41"
